--- a/client/src/App.css
+++ b/client/src/App.css
@@ -160,6 +160,71 @@ input[type="submit"] {
     border-color: #253d4c !important;
 }
 
+.btn-success {
+    background: #5cb85c;
+    color: #fff;
+    border: 2px solid #5cb85c;
+}
+
+.btn-success:hover,
+.btn-success:focus,
+.btn-success:active {
+    color: #5cb85c;
+    background: #fbf2eb !important;
+    border-color: #5cb85c !important;
+}
+
+.btn-warning {
+    background: #f0ad4e;
+    color: #fff;
+    border: 2px solid #f0ad4e;
+}
+
+.btn-warning:hover,
+.btn-warning:focus,
+.btn-warning:active {
+    background: #eea236 !important;
+    border-color: #eea236 !important;
+}
+
+.btn-danger {
+    background: #d9534f;
+    color: #fff;
+    border: 2px solid #d9534f;
+}
+
+.btn-danger:hover,
+.btn-danger:focus,
+.btn-danger:active {
+    background: #d43f3a !important;
+    border-color: #d43f3a !important;
+}
+
+.btn-outline {
+    background: none;
+    border: 2px solid gray;
+    font-size: 16px;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+}
+
+.btn-outline:hover,
+.btn-outline:focus,
+.btn-outline:active {
+    box-shadow: none;
+}
+
+.btn-lg {
+    padding: 18px 36px !important;
+}
+
+.admin-btn {
+    margin-top: 15px;
+    padding: 15px;
+    background-color: #fbf2eb;
+}
+
 .row {
     margin-left: -15px;
     margin-right: -15px;
@@ -214,8 +279,8 @@ input[type="submit"] {
     font-size: 20px;
 }
 
-.social-icons:hover{
-  color: black;
+.social-icons:hover {
+    color: black;
 }
 
 .social-icons i {
@@ -775,6 +840,7 @@ input[type="submit"] {
 }
 
 @media (min-width: 992px) {
+
     .col-1,
     .col-2,
     .col-3,
