--- a/client/src/index.css
+++ b/client/src/index.css
@@ -23,10 +23,9 @@ body {
 
 #home,
 #about,
-#travel-tips,
 #destination-page,
 #article-details,
-#profile,
+#profile-page,
 #not-found,
 #edit-page {
   position: relative;
