update css app and index files

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -267,7 +267,7 @@ input[type="submit"] {
 
 /* Social Icons */
 .social-icons {
-    text-dicoration: none;
+    text-decoration: none;
     list-style: none;
     display: -moz-inline-stack;
     display: inline-block;
